# penguins-incus-platform

./: .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  README.md
.devcontainer/: Dockerfile
.github/workflows/: ci.yml  create-readmes.yml  list-chromium-repos.yml  mirror-artifacts.yml  mirror-orgs-full.yml  mirror-osp-to-gitlab.yml  mirror-osp-to-ooc.yaml  mirror-to-osp.yml  notify-poller.yml  rate-limit-rerun.yml  rebase-lts.yml  reconcile-org-refs.yml  resolve-failures.yml  setup-gitlab-schedules.yml  setup-osp-mirrors.yml  sync-btrfs-devel-branches.yml  sync-from-gitlab.yml  sync-pieroproietti-forks.yml  sync-registered-imports.yml  sync-to-gitlab.yml  sync-upstream-sources.yml  translate-readmes.yml  update-readmes.yml  upstream-commits.yml  upstream-prs.yml
_hub_staging/: README.md
distrobuilder/: .gitlab-ci.yml  README.md
incus-oci-builder/src/: cache.rs
incus-oci-builder/src/incus/: api.rs  mod.rs
incus-oci-builder/tests/: integration_build.rs  unit_http_downloader.rs
integration/: README.md
integration/recovery-plugin/: pip-recovery-plugin.sh
kapsule-incus-manager/: README.md
oci-builder/: .gitignore  .gitlab-ci.yml  DESIGN.md
oci-builder/docs/: definition.md
oci-builder/incus-oci-builder/: Cargo.toml
oci-builder/incus-oci-builder/src/: arch.rs  progress.rs
oci-builder/incus-oci-builder/src/incus/: bootstrap.rs  client.rs  exec.rs
oci-builder/incus-oci-builder/src/oci/: convert.rs
oci-builder/incus-oci-builder/tests/: unit_export.rs  unit_oci.rs
oci-builder/src/: lib.rs  main.rs
oci-builder/tests/: unit_preflight.rs
penguins-incus-platform/: INTEGRATIONS.md  README.md
penguins-incus-platform/daemon/: pyproject.toml
scripts/: mirror-rpm.sh  reconcile-org-refs.sh  resolve-failures.sh  scan-rate-limit-failures.sh  shallow-reclone-gl.sh  sync-forks.sh  sync-kde-groups-mirrors.sh  sync-pieroproietti-forks.sh  sync-registered-imports.sh  sync-upstream-sources.sh  translate-readmes.sh  update-infra-deps.sh  update-readmes.sh  upstream-commits.sh  upstream-prs.sh  write-summary.sh
unified-image-server/: README.md
unified-image-server/penguins-eggs/: README.md
(+36 files in other folders)
